plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'io.freefair.aspectj.post-compile-weaving' version '8.6'
    id 'io.freefair.lombok' version "8.6"
}

group = 'com.kbalazsworks'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework:spring-websocket:6.1.4'
    implementation 'org.springframework:spring-messaging:6.1.4'
    implementation 'org.springframework.security:spring-security-web:6.2.2'
    implementation 'org.springframework.security:spring-security-config:6.2.2'
    implementation 'org.springframework.boot:spring-boot-starter-jooq:3.2.3'
    implementation 'org.flywaydb:flyway-core:10.10.0'
    implementation 'org.flywaydb:flyway-database-postgresql:10.10.0'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'org.springframework:spring-messaging:6.1.5'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
    implementation 'org.aspectj:aspectjweaver:1.9.22'

    compileOnly 'org.projectlombok:lombok:1.18.30'

    runtimeOnly 'org.aspectj:aspectjrt:1.9.22'
    runtimeOnly 'org.aspectj:aspectjweaver:1.9.22'

    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation 'org.projectlombok:lombok:1.18.30'
    testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
    testImplementation 'org.aspectj:aspectjweaver:1.9.22'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'

    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
}


tasks.named('test') {
    useJUnitPlatform()
}
